--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -5,10 +5,13 @@ body{
   /* linear-gradient(to bottom, rgba(45, 45, 45, 0.52), rgba(0, 0, 0, 0.73)),
   url('../assets/newimg.jpg'); */
   background-repeat: no-repeat;
-
-  overflow: auto;
+/* 
+  overflow: auto; */
 }
-
+.paymentLink{
+  text-decoration:none;
+  pointer-events:none;
+}
 @media screen and (max-width:450px) {
     body{
      background-image: none !important;
